# network-monitor

./: BUILD.bazel  README.md  config.json  go.mod  go.sum  latency-monitor.sh  latency-summary.py  main.go  netmon.service
config/: BUILD.bazel  config.go  json.go  json_test.go
icmp/: BUILD.bazel  base.go
ip/: BUILD.bazel  ip.go
ping/: BUILD.bazel  icmp.go  manager.go  probe.go  result.go
resolve/: BUILD.bazel  ips.go  manager.go  resolve.go  service.go  service_test.go
telemetry/: BUILD.bazel  setup.go
trace/: BUILD.bazel  trace.go
