load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "json.go",
    ],
    importpath = "github.com/VolatileDream/workbench/web/network-monitor/config",
    visibility = ["//visibility:public"],
)

go_test(
    name = "config_test",
    srcs = ["json_test.go"],
    embed = [":config"],
)
