load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "trace",
    srcs = ["trace.go"],
    importpath = "github.com/VolatileDream/workbench/web/network-monitor/trace",
    visibility = ["//visibility:public"],
    deps = [
        "//web/network-monitor/icmp",
        "@org_golang_x_net//icmp",
        "@org_golang_x_net//ipv4",
        "@org_golang_x_net//ipv6",
    ],
)
